--- a/exchange/requests.html
+++ b/exchange/requests.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exchange Requests</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/backend/assets/theme.css">
     <style>
       /* small page-specific tweaks while keeping Bootstrap look */
-      .panel{border:1px solid #ddd;padding:12px;border-radius:6px;background:#fff}
+      .panel{border:1px solid var(--border);padding:12px;border-radius:10px;background:var(--surface-2)}
       .two-col{display:flex;gap:20px;flex-wrap:wrap}
       table{width:100%;border-collapse:collapse;margin-top:8px}
-      th,td{padding:8px;border-bottom:1px solid #eee;text-align:left;font-size:13px}
-      th{background:#f9f9f9;font-weight:600}
-      .loading{color:#666}
-      .error{color:#900}
+      th,td{padding:8px;border-bottom:1px solid var(--border);text-align:left;font-size:13px}
+      th{background:rgba(255,255,255,0.03);font-weight:600}
+      .loading{color:var(--muted)}
+      .error{color:#ff9aa2}
     </style>
 </head>
 <body>
