--- a/list/request_exchange.html
+++ b/list/request_exchange.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Request Exchange</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/backend/assets/theme.css">
 </head>
 <body>
     <!-- Navbar -->
