--- a/messages/chat.html
+++ b/messages/chat.html
@@ -5,14 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chat</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/backend/assets/theme.css">
   <style>
-    #messages{height:60vh; overflow:auto; background:#fff; border:1px solid #eee; border-radius:6px; padding:10px}
+    #messages{height:60vh; overflow:auto; background:var(--surface-2); border:1px solid var(--border); border-radius:10px; padding:12px}
     .msg{margin-bottom:10px}
     .msg.me{ text-align:right }
     .msg .bubble{display:inline-block; padding:8px 12px; border-radius:14px; max-width:70%}
-    .msg.me .bubble{ background:#0d6efd; color:#fff }
-    .msg.other .bubble{ background:#f1f3f5 }
-    .meta{font-size:11px; color:#6c757d; margin-top:2px}
+    .msg.me .bubble{ background:var(--primary-700); color:#fff }
+    .msg.other .bubble{ background:#aaabaf; color:var(--text) }
+    .meta{font-size:11px; color:var(--muted); margin-top:2px}
   </style>
 </head>
 <body>
