--- a/security/register.html
+++ b/security/register.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/backend/assets/theme.css">
 </head>
 <body>
   <!-- Navbar -->
